--- a/containerized_webapp/templates/home.html
+++ b/containerized_webapp/templates/home.html
@@ -12,7 +12,7 @@
 			</div>
 			<hr/>
 			<br/>
-		<h2 align="center">Twitter Sentiment Analysis</h2>
+		<h2 align="center">PK Sentiment Analysis</h2>
 		</div>
 	</header>
 
